Figma to HTML Done

--- a/cart_view.html
+++ b/cart_view.html
@@ -222,10 +222,10 @@
             <div class="row">
                 <div class="col-12 wow fadeInUp" style="visibility: visible; animation-name: fadeInUp;">
                     <div class="wsus__breadcrumb_text">
-                        <h1>Events</h1>
+                        <h1>Cart View</h1>
                         <ul>
                             <li><a href="#">Home</a></li>
-                            <li>Events</li>
+                            <li>Cart View</li>
                         </ul>
                     </div>
                 </div>
@@ -238,143 +238,151 @@
 
 
     <!--============================
-        EVENT START
+        CART START
     =============================-->
-    <div class="wsus__event_page mt_95 xs_mt_75">
+    <section class="wsus__cart mt_120 xs_mt_100">
         <div class="container">
-            <div class="row">
-                <div class="col-xl-6">
-                    <div class="wsus__single_event_2 d-flex flex-wrap">
-                        <a class="wsus__single_event_2_img" href="#">
-                            <img src="images/event_2_img_1.png" alt="Event" class="img-fluid">
-                        </a>
-                        <div class="wsus__single_event_2_text">
-                            <p class="date">
-                                <span><img src="images/calendar_icon_blue.svg" alt="Calendar" class="img-fluid"></span>
-                                March 23, 2024
-                            </p>
-                            <a class="title" href="#">Business Management for all future projects.</a>
-                            <p class="time">
-                                <span><img src="images/clock_icon_white.png" alt="Clock" class="img-fluid"></span>
-                                8:00 am - 5:00 pm
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-6">
-                    <div class="wsus__single_event_2 d-flex flex-wrap">
-                        <a class="wsus__single_event_2_img" href="#">
-                            <img src="images/event_2_img_2.png" alt="Event" class="img-fluid">
-                        </a>
-                        <div class="wsus__single_event_2_text">
-                            <p class="date">
-                                <span><img src="images/calendar_icon_blue.svg" alt="Calendar" class="img-fluid"></span>
-                                March 23, 2024
-                            </p>
-                            <a class="title" href="#">Business Management for all future projects.</a>
-                            <p class="time">
-                                <span><img src="images/clock_icon_white.png" alt="Clock" class="img-fluid"></span>
-                                8:00 am - 5:00 pm
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-6">
-                    <div class="wsus__single_event_2 d-flex flex-wrap">
-                        <a class="wsus__single_event_2_img" href="#">
-                            <img src="images/event_2_img_3.png" alt="Event" class="img-fluid">
-                        </a>
-                        <div class="wsus__single_event_2_text">
-                            <p class="date">
-                                <span><img src="images/calendar_icon_blue.svg" alt="Calendar" class="img-fluid"></span>
-                                March 23, 2024
-                            </p>
-                            <a class="title" href="#">Business Management for all future projects.</a>
-                            <p class="time">
-                                <span><img src="images/clock_icon_white.png" alt="Clock" class="img-fluid"></span>
-                                8:00 am - 5:00 pm
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-6">
-                    <div class="wsus__single_event_2 d-flex flex-wrap">
-                        <a class="wsus__single_event_2_img" href="#">
-                            <img src="images/event_2_img_4.png" alt="Event" class="img-fluid">
-                        </a>
-                        <div class="wsus__single_event_2_text">
-                            <p class="date">
-                                <span><img src="images/calendar_icon_blue.svg" alt="Calendar" class="img-fluid"></span>
-                                March 23, 2024
-                            </p>
-                            <a class="title" href="#">Business Management for all future projects.</a>
-                            <p class="time">
-                                <span><img src="images/clock_icon_white.png" alt="Clock" class="img-fluid"></span>
-                                8:00 am - 5:00 pm
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-6">
-                    <div class="wsus__single_event_2 d-flex flex-wrap">
-                        <a class="wsus__single_event_2_img" href="#">
-                            <img src="images/event_2_img_5.png" alt="Event" class="img-fluid">
-                        </a>
-                        <div class="wsus__single_event_2_text">
-                            <p class="date">
-                                <span><img src="images/calendar_icon_blue.svg" alt="Calendar" class="img-fluid"></span>
-                                March 23, 2024
-                            </p>
-                            <a class="title" href="#">Business Management for all future projects.</a>
-                            <p class="time">
-                                <span><img src="images/clock_icon_white.png" alt="Clock" class="img-fluid"></span>
-                                8:00 am - 5:00 pm
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-6">
-                    <div class="wsus__single_event_2 d-flex flex-wrap">
-                        <a class="wsus__single_event_2_img" href="#">
-                            <img src="images/event_2_img_6.png" alt="Event" class="img-fluid">
-                        </a>
-                        <div class="wsus__single_event_2_text">
-                            <p class="date">
-                                <span><img src="images/calendar_icon_blue.svg" alt="Calendar" class="img-fluid"></span>
-                                March 23, 2024
-                            </p>
-                            <a class="title" href="#">Business Management for all future projects.</a>
-                            <p class="time">
-                                <span><img src="images/clock_icon_white.png" alt="Clock" class="img-fluid"></span>
-                                8:00 am - 5:00 pm
-                            </p>
+            <div class="row justify-content-center">
+                <div class="col-xl-10 wow fadeInUp">
+                    <div class="wsus__cart_list">
+                        <div class="table-responsive">
+                            <table>
+                                <thead>
+                                    <tr>
+                                        <th class="pro_img">Item</th>
+
+                                        <th class="pro_name">Name</th>
+
+                                        <th class="pro_select">Quantity</th>
+
+                                        <th class="pro_tk">Price</th>
+
+                                        <th class="pro_icon">Action</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td class="pro_img">
+                                            <img src="images/product_cart_1.jpg" alt="product" class="img-fluid w-100">
+                                        </td>
+
+                                        <td class="pro_name">
+                                            <a href="#">Black Sneakers</a>
+                                        </td>
+
+                                        <td class="pro_select">
+                                            <div class="quentity_btn">
+                                                <button class="btn btn-danger"><i class="fal fa-minus"></i></button>
+                                                <input type="text" placeholder="1">
+                                                <button class="btn btn-success"><i class="fal fa-plus"></i></button>
+                                            </div>
+                                        </td>
+
+                                        <td class="pro_tk">
+                                            <h6>$120.00</h6>
+                                        </td>
+
+                                        <td class="pro_icon">
+                                            <a href="#"><i class="fal fa-times"></i></a>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td class="pro_img">
+                                            <img src="images/product_cart_2.jpg" alt="product" class="img-fluid w-100">
+                                        </td>
+
+                                        <td class="pro_name">
+                                            <a href="#">Black Sneakers</a>
+                                        </td>
+
+                                        <td class="pro_select">
+                                            <div class="quentity_btn">
+                                                <button class="btn btn-danger"><i class="fal fa-minus"></i></button>
+                                                <input type="text" placeholder="2">
+                                                <button class="btn btn-success"><i class="fal fa-plus"></i></button>
+                                            </div>
+                                        </td>
+
+                                        <td class="pro_tk">
+                                            <h6>$99.000</h6>
+                                        </td>
+
+                                        <td class="pro_icon">
+                                            <a href="#"><i class="fal fa-times"></i></a>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td class="pro_img">
+                                            <img src="images/product_cart_3.jpg" alt="product" class="img-fluid w-100">
+                                        </td>
+
+                                        <td class="pro_name">
+                                            <a href="#">Black Sneakers</a>
+                                        </td>
+
+                                        <td class="pro_select">
+                                            <div class="quentity_btn">
+                                                <button class="btn btn-danger"><i class="fal fa-minus"></i></button>
+                                                <input type="text" placeholder="3">
+                                                <button class="btn btn-success"><i class="fal fa-plus"></i></button>
+                                            </div>
+                                        </td>
+
+                                        <td class="pro_tk">
+                                            <h6>$120.00</h6>
+                                        </td>
+
+                                        <td class="pro_icon">
+                                            <a href="#"><i class="fal fa-times"></i></a>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="wsus__pagination mt_60 wow fadeInUp">
-                <nav aria-label="Page navigation example">
-                    <ul class="pagination justify-content-center">
-                        <li class="page-item">
-                            <a class="page-link" href="#" aria-label="Previous">
-                                <i class="far fa-arrow-left"></i>
-                            </a>
+
+            <div class="row justify-content-center">
+                <div class="col-xl-10">
+                    <div class="wsus__cart_list_bottom">
+                        <div class="row justify-content-between">
+                            <div class="col-md-6 col-xl-5 wow fadeInUp">
+                                <div class="wsus__cart_coupon">
+                                    <h4>Apply Coupon </h4>
+                                    <form action="#">
+                                        <input type="text" placeholder="Code Here">
+                                        <button type="submit" class="common_btn">Apply</button>
+                                    </form>
+                                </div>
+                            </div>
+                            <div class="col-md-6 col-xl-5 wow fadeInUp">
+                                <div class="wsus__cart_list_pricing">
+                                    <h6>Total <span>$360.00</span></h6>
+                                    <p>Tax<span>12%</span></p>
+                                    <p>Discount<span>$60.00</span></p>
+                                    <h5>Sub Total<span>$300.00</span></h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row justify-content-center">
+                <div class="col-xl-10 wow fadeInUp">
+                    <ul class="wsus__cart_list_bottom_btn">
+                        <li><a href="products.html" class="common_btn cont_shop">Continue To Shipping</a>
                         </li>
-                        <li class="page-item"><a class="page-link active" href="#">01</a></li>
-                        <li class="page-item"><a class="page-link" href="#">02</a></li>
-                        <li class="page-item"><a class="page-link" href="#">03</a></li>
-                        <li class="page-item">
-                            <a class="page-link" href="#" aria-label="Next">
-                                <i class="far fa-arrow-right"></i>
-                            </a>
+                        <li><a href="checkout.html" class="common_btn">Checkout <i class="fas fa-chevron-right"></i></a>
                         </li>
                     </ul>
-                </nav>
+                </div>
             </div>
         </div>
-    </div>
+    </section>
     <!--============================
-        EVENT END
+        CART END
     =============================-->
 
 
