--- a/contact_us.html
+++ b/contact_us.html
@@ -222,10 +222,10 @@
             <div class="row">
                 <div class="col-12 wow fadeInUp" style="visibility: visible; animation-name: fadeInUp;">
                     <div class="wsus__breadcrumb_text">
-                        <h1>Events</h1>
+                        <h1>Contact Us</h1>
                         <ul>
                             <li><a href="#">Home</a></li>
-                            <li>Events</li>
+                            <li>Contact Us</li>
                         </ul>
                     </div>
                 </div>
@@ -238,143 +238,100 @@
 
 
     <!--============================
-        EVENT START
+        CONTACT US START
     =============================-->
-    <div class="wsus__event_page mt_95 xs_mt_75">
+    <section class="wsus__contact_us mt_120 xs_mt_100">
         <div class="container">
             <div class="row">
-                <div class="col-xl-6">
-                    <div class="wsus__single_event_2 d-flex flex-wrap">
-                        <a class="wsus__single_event_2_img" href="#">
-                            <img src="images/event_2_img_1.png" alt="Event" class="img-fluid">
-                        </a>
-                        <div class="wsus__single_event_2_text">
-                            <p class="date">
-                                <span><img src="images/calendar_icon_blue.svg" alt="Calendar" class="img-fluid"></span>
-                                March 23, 2024
-                            </p>
-                            <a class="title" href="#">Business Management for all future projects.</a>
-                            <p class="time">
-                                <span><img src="images/clock_icon_white.png" alt="Clock" class="img-fluid"></span>
-                                8:00 am - 5:00 pm
-                            </p>
-                        </div>
+                <div class="col-xl-4">
+                    <div class="wsus__contact_info" style="background: url(images/contact_info_bg.png);">
+                        <h2>contact information</h2>
+                        <ul>
+                            <li>
+                                <div class="icon">
+                                    <img src="images/call_icon_white.svg" alt="Call" class="img-fluid">
+                                </div>
+                                <a href="#">
+                                    <span>phone</span>
+                                    +9654842152154
+                                </a>
+                            </li>
+                            <li>
+                                <div class="icon">
+                                    <img src="images/mail_icon_white.svg" alt="Mail" class="img-fluid">
+                                </div>
+                                <a href="#">
+                                    <span>mail</span>
+                                    example@gmail.com
+                                </a>
+                            </li>
+                            <li>
+                                <div class="icon">
+                                    <img src="images/map_icon_white.png" alt="Mail" class="img-fluid">
+                                </div>
+                                <p>
+                                    <span>location</span>
+                                    25-02 44th Queens,United States
+                                </p>
+                            </li>
+                        </ul>
                     </div>
                 </div>
-                <div class="col-xl-6">
-                    <div class="wsus__single_event_2 d-flex flex-wrap">
-                        <a class="wsus__single_event_2_img" href="#">
-                            <img src="images/event_2_img_2.png" alt="Event" class="img-fluid">
-                        </a>
-                        <div class="wsus__single_event_2_text">
-                            <p class="date">
-                                <span><img src="images/calendar_icon_blue.svg" alt="Calendar" class="img-fluid"></span>
-                                March 23, 2024
-                            </p>
-                            <a class="title" href="#">Business Management for all future projects.</a>
-                            <p class="time">
-                                <span><img src="images/clock_icon_white.png" alt="Clock" class="img-fluid"></span>
-                                8:00 am - 5:00 pm
-                            </p>
-                        </div>
+                <div class="col-xl-8">
+                    <div class="wsus__contact_map">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3648.496963310731!2d90.38043987589973!3d23.871990184096507!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755c40fb857cb01%3A0xb6ca60a98b4c89e2!2sUttara%20Sector%2012%20Park!5e0!3m2!1sen!2sbd!4v1722847815527!5m2!1sen!2sbd"
+                            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
-                <div class="col-xl-6">
-                    <div class="wsus__single_event_2 d-flex flex-wrap">
-                        <a class="wsus__single_event_2_img" href="#">
-                            <img src="images/event_2_img_3.png" alt="Event" class="img-fluid">
-                        </a>
-                        <div class="wsus__single_event_2_text">
-                            <p class="date">
-                                <span><img src="images/calendar_icon_blue.svg" alt="Calendar" class="img-fluid"></span>
-                                March 23, 2024
-                            </p>
-                            <a class="title" href="#">Business Management for all future projects.</a>
-                            <p class="time">
-                                <span><img src="images/clock_icon_white.png" alt="Clock" class="img-fluid"></span>
-                                8:00 am - 5:00 pm
-                            </p>
-                        </div>
+                <div class="col-12 mt_70">
+                    <div class="wsus__contact_form">
+                        <h3>Reach Us For Instant Service</h3>
+                        <form action="#">
+                            <div class="row">
+                                <div class="col-xl-6">
+                                    <div class="wsus__contact_form_input">
+                                        <label>First Name</label>
+                                        <input type="text">
+                                    </div>
+                                </div>
+                                <div class="col-xl-6">
+                                    <div class="wsus__contact_form_input">
+                                        <label>Email</label>
+                                        <input type="email">
+                                    </div>
+                                </div>
+                                <div class="col-xl-6">
+                                    <div class="wsus__contact_form_input">
+                                        <label>Phone</label>
+                                        <input type="text">
+                                    </div>
+                                </div>
+                                <div class="col-xl-6">
+                                    <div class="wsus__contact_form_input">
+                                        <label>Subject</label>
+                                        <input type="text">
+                                    </div>
+                                </div>
+                                <div class="col-xl-12">
+                                    <div class="wsus__contact_form_input">
+                                        <label>Subject</label>
+                                        <textarea rows="8"
+                                            placeholder="Notes about your Passion, e.g. special notes for Job."></textarea>
+                                        <button type="submit" class="common_btn">sent message <i
+                                                class="fas fa-chevron-right"></i></button>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
                     </div>
                 </div>
-                <div class="col-xl-6">
-                    <div class="wsus__single_event_2 d-flex flex-wrap">
-                        <a class="wsus__single_event_2_img" href="#">
-                            <img src="images/event_2_img_4.png" alt="Event" class="img-fluid">
-                        </a>
-                        <div class="wsus__single_event_2_text">
-                            <p class="date">
-                                <span><img src="images/calendar_icon_blue.svg" alt="Calendar" class="img-fluid"></span>
-                                March 23, 2024
-                            </p>
-                            <a class="title" href="#">Business Management for all future projects.</a>
-                            <p class="time">
-                                <span><img src="images/clock_icon_white.png" alt="Clock" class="img-fluid"></span>
-                                8:00 am - 5:00 pm
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-6">
-                    <div class="wsus__single_event_2 d-flex flex-wrap">
-                        <a class="wsus__single_event_2_img" href="#">
-                            <img src="images/event_2_img_5.png" alt="Event" class="img-fluid">
-                        </a>
-                        <div class="wsus__single_event_2_text">
-                            <p class="date">
-                                <span><img src="images/calendar_icon_blue.svg" alt="Calendar" class="img-fluid"></span>
-                                March 23, 2024
-                            </p>
-                            <a class="title" href="#">Business Management for all future projects.</a>
-                            <p class="time">
-                                <span><img src="images/clock_icon_white.png" alt="Clock" class="img-fluid"></span>
-                                8:00 am - 5:00 pm
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-6">
-                    <div class="wsus__single_event_2 d-flex flex-wrap">
-                        <a class="wsus__single_event_2_img" href="#">
-                            <img src="images/event_2_img_6.png" alt="Event" class="img-fluid">
-                        </a>
-                        <div class="wsus__single_event_2_text">
-                            <p class="date">
-                                <span><img src="images/calendar_icon_blue.svg" alt="Calendar" class="img-fluid"></span>
-                                March 23, 2024
-                            </p>
-                            <a class="title" href="#">Business Management for all future projects.</a>
-                            <p class="time">
-                                <span><img src="images/clock_icon_white.png" alt="Clock" class="img-fluid"></span>
-                                8:00 am - 5:00 pm
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="wsus__pagination mt_60 wow fadeInUp">
-                <nav aria-label="Page navigation example">
-                    <ul class="pagination justify-content-center">
-                        <li class="page-item">
-                            <a class="page-link" href="#" aria-label="Previous">
-                                <i class="far fa-arrow-left"></i>
-                            </a>
-                        </li>
-                        <li class="page-item"><a class="page-link active" href="#">01</a></li>
-                        <li class="page-item"><a class="page-link" href="#">02</a></li>
-                        <li class="page-item"><a class="page-link" href="#">03</a></li>
-                        <li class="page-item">
-                            <a class="page-link" href="#" aria-label="Next">
-                                <i class="far fa-arrow-right"></i>
-                            </a>
-                        </li>
-                    </ul>
-                </nav>
             </div>
         </div>
-    </div>
+    </section>
     <!--============================
-        EVENT END
+        CONTACT US END
     =============================-->
 
 
