--- a/faq.html
+++ b/faq.html
@@ -222,10 +222,10 @@
             <div class="row">
                 <div class="col-12 wow fadeInUp" style="visibility: visible; animation-name: fadeInUp;">
                     <div class="wsus__breadcrumb_text">
-                        <h1>Events</h1>
+                        <h1>Frequently Asked Questions</h1>
                         <ul>
                             <li><a href="#">Home</a></li>
-                            <li>Events</li>
+                            <li>faq</li>
                         </ul>
                     </div>
                 </div>
@@ -238,143 +238,137 @@
 
 
     <!--============================
-        EVENT START
+        FAQ PAGE START
     =============================-->
-    <div class="wsus__event_page mt_95 xs_mt_75">
+    <div class="wsus__faq_page mt_110 xs_mt_90">
         <div class="container">
             <div class="row">
-                <div class="col-xl-6">
-                    <div class="wsus__single_event_2 d-flex flex-wrap">
-                        <a class="wsus__single_event_2_img" href="#">
-                            <img src="images/event_2_img_1.png" alt="Event" class="img-fluid">
-                        </a>
-                        <div class="wsus__single_event_2_text">
-                            <p class="date">
-                                <span><img src="images/calendar_icon_blue.svg" alt="Calendar" class="img-fluid"></span>
-                                March 23, 2024
-                            </p>
-                            <a class="title" href="#">Business Management for all future projects.</a>
-                            <p class="time">
-                                <span><img src="images/clock_icon_white.png" alt="Clock" class="img-fluid"></span>
-                                8:00 am - 5:00 pm
-                            </p>
+                <div class="col-xl-5">
+                    <div class="wsus__faq_text m-0">
+                        <div class="section_heading heading_left mb_15">
+                            <h2>We help to achieve mutual goals.</h2>
+                        </div>
+                        <p>Fermentum posuere urna nec tincidunt praesent semper. Ullamcorper eget nulla facilisi etiam
+                            dignissim diam quis Scelerisque eu ultrices vitae auctor eu Augue.</p>
+                        <ul class="d-flex flex-wrap align-items-center">
+                            <li>
+                                <span class="icon"><img src="images/call_icon_white.svg" alt="Call"
+                                        class="img-fluid"></span>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <span>Hotline:</span>
+                                    +(123) 245 233 98
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-xl-7">
+                    <div class="wsus__accordian_area">
+                        <div class="accordion" id="accordionExample">
+                            <div class="accordion-item">
+                                <h2 class="accordion-header">
+                                    <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                        What industries covered?
+                                    </button>
+                                </h2>
+                                <div id="collapseOne" class="accordion-collapse collapse show"
+                                    data-bs-parent="#accordionExample">
+                                    <div class="accordion-body">
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui tenetur
+                                            deserunt placeat quo. Doloribus eveniet sequi minima, vitae aliquid ut
+                                            nobis
+                                            quidem esse laudantium ipsa, aliquam architecto in recusandae? Laborum.
+                                        </p>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui tenetur
+                                            deserunt placeat quo. Doloribus eveniet sequi minima, vitae aliquid ut
+                                            nobis
+                                            quidem esse laudantium ipsa, aliquam architecto in recusandae? Laborum.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="accordion-item">
+                                <h2 class="accordion-header">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                        What Is The Right Time To File For Divorce?
+                                    </button>
+                                </h2>
+                                <div id="collapseTwo" class="accordion-collapse collapse"
+                                    data-bs-parent="#accordionExample">
+                                    <div class="accordion-body">
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui tenetur
+                                            deserunt placeat quo. Doloribus eveniet sequi minima, vitae aliquid ut
+                                            nobis
+                                            quidem esse laudantium ipsa, aliquam architecto in recusandae? Laborum.
+                                        </p>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui tenetur
+                                            deserunt placeat quo. Doloribus eveniet sequi minima, vitae aliquid ut
+                                            nobis
+                                            quidem esse laudantium ipsa, aliquam architecto in recusandae? Laborum.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="accordion-item">
+                                <h2 class="accordion-header">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#collapseThree" aria-expanded="false"
+                                        aria-controls="collapseThree">
+                                        How Much Compensation Will I Receive For Inquiries?
+                                    </button>
+                                </h2>
+                                <div id="collapseThree" class="accordion-collapse collapse"
+                                    data-bs-parent="#accordionExample">
+                                    <div class="accordion-body">
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui tenetur
+                                            deserunt placeat quo. Doloribus eveniet sequi minima, vitae aliquid ut
+                                            nobis
+                                            quidem esse laudantium ipsa, aliquam architecto in recusandae? Laborum.
+                                        </p>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui tenetur
+                                            deserunt placeat quo. Doloribus eveniet sequi minima, vitae aliquid ut
+                                            nobis
+                                            quidem esse laudantium ipsa, aliquam architecto in recusandae? Laborum.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="accordion-item">
+                                <h2 class="accordion-header">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#collapseThree1" aria-expanded="false"
+                                        aria-controls="collapseThree1">
+                                        How Much Do You Charge For Each Hearing?
+                                    </button>
+                                </h2>
+                                <div id="collapseThree1" class="accordion-collapse collapse"
+                                    data-bs-parent="#accordionExample">
+                                    <div class="accordion-body">
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui tenetur
+                                            deserunt placeat quo. Doloribus eveniet sequi minima, vitae aliquid ut
+                                            nobis
+                                            quidem esse laudantium ipsa, aliquam architecto in recusandae? Laborum.
+                                        </p>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui tenetur
+                                            deserunt placeat quo. Doloribus eveniet sequi minima, vitae aliquid ut
+                                            nobis
+                                            quidem esse laudantium ipsa, aliquam architecto in recusandae? Laborum.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-6">
-                    <div class="wsus__single_event_2 d-flex flex-wrap">
-                        <a class="wsus__single_event_2_img" href="#">
-                            <img src="images/event_2_img_2.png" alt="Event" class="img-fluid">
-                        </a>
-                        <div class="wsus__single_event_2_text">
-                            <p class="date">
-                                <span><img src="images/calendar_icon_blue.svg" alt="Calendar" class="img-fluid"></span>
-                                March 23, 2024
-                            </p>
-                            <a class="title" href="#">Business Management for all future projects.</a>
-                            <p class="time">
-                                <span><img src="images/clock_icon_white.png" alt="Clock" class="img-fluid"></span>
-                                8:00 am - 5:00 pm
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-6">
-                    <div class="wsus__single_event_2 d-flex flex-wrap">
-                        <a class="wsus__single_event_2_img" href="#">
-                            <img src="images/event_2_img_3.png" alt="Event" class="img-fluid">
-                        </a>
-                        <div class="wsus__single_event_2_text">
-                            <p class="date">
-                                <span><img src="images/calendar_icon_blue.svg" alt="Calendar" class="img-fluid"></span>
-                                March 23, 2024
-                            </p>
-                            <a class="title" href="#">Business Management for all future projects.</a>
-                            <p class="time">
-                                <span><img src="images/clock_icon_white.png" alt="Clock" class="img-fluid"></span>
-                                8:00 am - 5:00 pm
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-6">
-                    <div class="wsus__single_event_2 d-flex flex-wrap">
-                        <a class="wsus__single_event_2_img" href="#">
-                            <img src="images/event_2_img_4.png" alt="Event" class="img-fluid">
-                        </a>
-                        <div class="wsus__single_event_2_text">
-                            <p class="date">
-                                <span><img src="images/calendar_icon_blue.svg" alt="Calendar" class="img-fluid"></span>
-                                March 23, 2024
-                            </p>
-                            <a class="title" href="#">Business Management for all future projects.</a>
-                            <p class="time">
-                                <span><img src="images/clock_icon_white.png" alt="Clock" class="img-fluid"></span>
-                                8:00 am - 5:00 pm
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-6">
-                    <div class="wsus__single_event_2 d-flex flex-wrap">
-                        <a class="wsus__single_event_2_img" href="#">
-                            <img src="images/event_2_img_5.png" alt="Event" class="img-fluid">
-                        </a>
-                        <div class="wsus__single_event_2_text">
-                            <p class="date">
-                                <span><img src="images/calendar_icon_blue.svg" alt="Calendar" class="img-fluid"></span>
-                                March 23, 2024
-                            </p>
-                            <a class="title" href="#">Business Management for all future projects.</a>
-                            <p class="time">
-                                <span><img src="images/clock_icon_white.png" alt="Clock" class="img-fluid"></span>
-                                8:00 am - 5:00 pm
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-6">
-                    <div class="wsus__single_event_2 d-flex flex-wrap">
-                        <a class="wsus__single_event_2_img" href="#">
-                            <img src="images/event_2_img_6.png" alt="Event" class="img-fluid">
-                        </a>
-                        <div class="wsus__single_event_2_text">
-                            <p class="date">
-                                <span><img src="images/calendar_icon_blue.svg" alt="Calendar" class="img-fluid"></span>
-                                March 23, 2024
-                            </p>
-                            <a class="title" href="#">Business Management for all future projects.</a>
-                            <p class="time">
-                                <span><img src="images/clock_icon_white.png" alt="Clock" class="img-fluid"></span>
-                                8:00 am - 5:00 pm
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="wsus__pagination mt_60 wow fadeInUp">
-                <nav aria-label="Page navigation example">
-                    <ul class="pagination justify-content-center">
-                        <li class="page-item">
-                            <a class="page-link" href="#" aria-label="Previous">
-                                <i class="far fa-arrow-left"></i>
-                            </a>
-                        </li>
-                        <li class="page-item"><a class="page-link active" href="#">01</a></li>
-                        <li class="page-item"><a class="page-link" href="#">02</a></li>
-                        <li class="page-item"><a class="page-link" href="#">03</a></li>
-                        <li class="page-item">
-                            <a class="page-link" href="#" aria-label="Next">
-                                <i class="far fa-arrow-right"></i>
-                            </a>
-                        </li>
-                    </ul>
-                </nav>
             </div>
         </div>
     </div>
     <!--============================
-        EVENT END
+        FAQ PAGE END
     =============================-->
 
 
