--- a/pricing.html
+++ b/pricing.html
@@ -222,10 +222,10 @@
             <div class="row">
                 <div class="col-12 wow fadeInUp" style="visibility: visible; animation-name: fadeInUp;">
                     <div class="wsus__breadcrumb_text">
-                        <h1>Events</h1>
+                        <h1>Pricing</h1>
                         <ul>
                             <li><a href="#">Home</a></li>
-                            <li>Events</li>
+                            <li>Pricing</li>
                         </ul>
                     </div>
                 </div>
@@ -238,143 +238,58 @@
 
 
     <!--============================
-        EVENT START
+        PRICING PAGE START
     =============================-->
-    <div class="wsus__event_page mt_95 xs_mt_75">
+    <section class="wsus__pricing_page mt_95 xs_mt_75">
         <div class="container">
             <div class="row">
-                <div class="col-xl-6">
-                    <div class="wsus__single_event_2 d-flex flex-wrap">
-                        <a class="wsus__single_event_2_img" href="#">
-                            <img src="images/event_2_img_1.png" alt="Event" class="img-fluid">
-                        </a>
-                        <div class="wsus__single_event_2_text">
-                            <p class="date">
-                                <span><img src="images/calendar_icon_blue.svg" alt="Calendar" class="img-fluid"></span>
-                                March 23, 2024
-                            </p>
-                            <a class="title" href="#">Business Management for all future projects.</a>
-                            <p class="time">
-                                <span><img src="images/clock_icon_white.png" alt="Clock" class="img-fluid"></span>
-                                8:00 am - 5:00 pm
-                            </p>
-                        </div>
+                <div class="col-xl-4">
+                    <div class="wsus__single_pricing">
+                        <h4>Standard</h4>
+                        <p>Nullam ncidunt torto ac maximus odio ipsum sed id mauris.</p>
+                        <h2>$340/<span>m</span></h2>
+                        <ul>
+                            <li>Regular Brand Strategy</li>
+                            <li>Advance Marketing</li>
+                            <li class="delete">Social Media Strategy</li>
+                            <li class="delete">Tow Branding Consultations</li>
+                        </ul>
+                        <a class="common_btn" href="#">Purchase Plan</a>
                     </div>
                 </div>
-                <div class="col-xl-6">
-                    <div class="wsus__single_event_2 d-flex flex-wrap">
-                        <a class="wsus__single_event_2_img" href="#">
-                            <img src="images/event_2_img_2.png" alt="Event" class="img-fluid">
-                        </a>
-                        <div class="wsus__single_event_2_text">
-                            <p class="date">
-                                <span><img src="images/calendar_icon_blue.svg" alt="Calendar" class="img-fluid"></span>
-                                March 23, 2024
-                            </p>
-                            <a class="title" href="#">Business Management for all future projects.</a>
-                            <p class="time">
-                                <span><img src="images/clock_icon_white.png" alt="Clock" class="img-fluid"></span>
-                                8:00 am - 5:00 pm
-                            </p>
-                        </div>
+                <div class="col-xl-4">
+                    <div class="wsus__single_pricing active">
+                        <h4>Standard</h4>
+                        <p>Nullam ncidunt torto ac maximus odio ipsum sed id mauris.</p>
+                        <h2>$650/<span>m</span></h2>
+                        <ul>
+                            <li>Regular Brand Strategy</li>
+                            <li>Advance Marketing</li>
+                            <li>Social Media Strategy</li>
+                            <li class="delete">Tow Branding Consultations</li>
+                        </ul>
+                        <a class="common_btn" href="#">Purchase Plan</a>
                     </div>
                 </div>
-                <div class="col-xl-6">
-                    <div class="wsus__single_event_2 d-flex flex-wrap">
-                        <a class="wsus__single_event_2_img" href="#">
-                            <img src="images/event_2_img_3.png" alt="Event" class="img-fluid">
-                        </a>
-                        <div class="wsus__single_event_2_text">
-                            <p class="date">
-                                <span><img src="images/calendar_icon_blue.svg" alt="Calendar" class="img-fluid"></span>
-                                March 23, 2024
-                            </p>
-                            <a class="title" href="#">Business Management for all future projects.</a>
-                            <p class="time">
-                                <span><img src="images/clock_icon_white.png" alt="Clock" class="img-fluid"></span>
-                                8:00 am - 5:00 pm
-                            </p>
-                        </div>
+                <div class="col-xl-4">
+                    <div class="wsus__single_pricing">
+                        <h4>Business</h4>
+                        <p>Nullam ncidunt torto ac maximus odio ipsum sed id mauris.</p>
+                        <h2>$840/<span>m</span></h2>
+                        <ul>
+                            <li>Regular Brand Strategy</li>
+                            <li>Advance Marketing</li>
+                            <li>Social Media Strategy</li>
+                            <li>Tow Branding Consultations</li>
+                        </ul>
+                        <a class="common_btn" href="#">Purchase Plan</a>
                     </div>
                 </div>
-                <div class="col-xl-6">
-                    <div class="wsus__single_event_2 d-flex flex-wrap">
-                        <a class="wsus__single_event_2_img" href="#">
-                            <img src="images/event_2_img_4.png" alt="Event" class="img-fluid">
-                        </a>
-                        <div class="wsus__single_event_2_text">
-                            <p class="date">
-                                <span><img src="images/calendar_icon_blue.svg" alt="Calendar" class="img-fluid"></span>
-                                March 23, 2024
-                            </p>
-                            <a class="title" href="#">Business Management for all future projects.</a>
-                            <p class="time">
-                                <span><img src="images/clock_icon_white.png" alt="Clock" class="img-fluid"></span>
-                                8:00 am - 5:00 pm
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-6">
-                    <div class="wsus__single_event_2 d-flex flex-wrap">
-                        <a class="wsus__single_event_2_img" href="#">
-                            <img src="images/event_2_img_5.png" alt="Event" class="img-fluid">
-                        </a>
-                        <div class="wsus__single_event_2_text">
-                            <p class="date">
-                                <span><img src="images/calendar_icon_blue.svg" alt="Calendar" class="img-fluid"></span>
-                                March 23, 2024
-                            </p>
-                            <a class="title" href="#">Business Management for all future projects.</a>
-                            <p class="time">
-                                <span><img src="images/clock_icon_white.png" alt="Clock" class="img-fluid"></span>
-                                8:00 am - 5:00 pm
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-6">
-                    <div class="wsus__single_event_2 d-flex flex-wrap">
-                        <a class="wsus__single_event_2_img" href="#">
-                            <img src="images/event_2_img_6.png" alt="Event" class="img-fluid">
-                        </a>
-                        <div class="wsus__single_event_2_text">
-                            <p class="date">
-                                <span><img src="images/calendar_icon_blue.svg" alt="Calendar" class="img-fluid"></span>
-                                March 23, 2024
-                            </p>
-                            <a class="title" href="#">Business Management for all future projects.</a>
-                            <p class="time">
-                                <span><img src="images/clock_icon_white.png" alt="Clock" class="img-fluid"></span>
-                                8:00 am - 5:00 pm
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="wsus__pagination mt_60 wow fadeInUp">
-                <nav aria-label="Page navigation example">
-                    <ul class="pagination justify-content-center">
-                        <li class="page-item">
-                            <a class="page-link" href="#" aria-label="Previous">
-                                <i class="far fa-arrow-left"></i>
-                            </a>
-                        </li>
-                        <li class="page-item"><a class="page-link active" href="#">01</a></li>
-                        <li class="page-item"><a class="page-link" href="#">02</a></li>
-                        <li class="page-item"><a class="page-link" href="#">03</a></li>
-                        <li class="page-item">
-                            <a class="page-link" href="#" aria-label="Next">
-                                <i class="far fa-arrow-right"></i>
-                            </a>
-                        </li>
-                    </ul>
-                </nav>
             </div>
         </div>
-    </div>
+    </section>
     <!--============================
-        EVENT END
+        PRICING PAGE END
     =============================-->
 
 
